@@ -1,16 +1,19 @@
-<!-- Automagically generated by the ToDo program on 05/28/05, 10:46 -->
+<!-- Automagically generated by the ToDo program on 05/29/05, 09:08 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1117291577">
-        Fix action_pkg_handler to go through the metadatas only once, not once per non-option argument.
-    </note>
     <note priority="high" time="1117265608">
         Update action_pkg_handler to use devaway_T if type == dev
     </note>
+    <note priority="high" time="1117292680">
+        Add results attr for results size in pkgCache_T::dump()?
+    </note>
     <note priority="medium" time="1117265590">
         herdstat --fetch should do any required fetching, not just herds.xml.
+    </note>
+    <note priority="low" time="1117326066">
+        have action_find_handler respect --with-{herd,maintainer} ?
     </note>
     <note priority="verylow" time="1115448993">
         Instead of having -D print debug messages to stdout, maybe have it dump it all to ./herdstat.debug
