@@ -2,7 +2,7 @@
 # $Id: configure.ac 246 2005-04-26 12:03:53Z ka0ttic $
 
 AC_PREREQ(2.59)
-AC_INIT([herdstat], [1.1.1_rc1], [ka0ttic@gentoo.org])
+AC_INIT([herdstat], [1.1.1_rc2], [ka0ttic@gentoo.org])
 AC_CONFIG_SRCDIR([src/herdstat.cc])
 AC_CONFIG_AUX_DIR([config])
 AM_INIT_AUTOMAKE([1.8 dist-bzip2 no-dist-gzip])
