@@ -39,12 +39,10 @@ main(int argc, char **argv)
     out.add_highlight(util::current_user());
 
     pkgCache_T pkgcache;
+    pkgcache.load();
 
     if (not pkgcache.empty())
-    {
-        pkgcache.load();
         pkgcache.dump(&std::cout);
-    }
     
     return EXIT_SUCCESS;
 }
